--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -7,6 +7,32 @@ body
 	background: #eee
 	height: 100px
 
+#tweet-form
+	margin-top: 20px
+	.tweet-form-block
+		margin-bottom: 20px
+		input, textarea
+			padding: 10px
+		.name
+			width: 450px
+		.submit
+			float: right
+			width: 100px
+		.message
+			width: 600px
+
+#tweets
+	ul
+		margin: 0
+		padding: 0
+	li
+		border-bottom: 1px solid #e0e0e0
+		list-style-type: none
+		padding: 20px 0
+	.created-at
+		color: #0090ff
+		float: right
+
 #footer
 	color: #888
 	margin-top: 40px
